# vyntra

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  release.yml
apps/desktop/: .env.production  index.html  manager.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/desktop/.tauri/: vyntra.key.pub
apps/desktop/public/: catalog.json
apps/desktop/src/: main.js  main.tsx  manager.js  manager.tsx
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  state.rs
apps/desktop/src-tauri/src/ipc/: config.rs  guard.rs  launcher.rs  layout.rs  media.rs  mod.rs  settings.rs  shortcuts.rs  storage.rs  system.rs  ui.rs  update.rs  widgets.rs
apps/desktop/src-tauri/src/launcher/: mod.rs
apps/desktop/src-tauri/src/media/: mod.rs
apps/desktop/src-tauri/src/persistence/: mod.rs
apps/desktop/src-tauri/src/protocol/: mod.rs
apps/desktop/src-tauri/src/system/: mod.rs
apps/desktop/src-tauri/src/tray/: mod.rs
apps/desktop/src-tauri/src/vault/: mod.rs
apps/desktop/src-tauri/src/watchdog/: mod.rs
apps/desktop/src-tauri/src/window/: mod.rs
apps/desktop/src/core/: GridSurface copy.js  GridSurface.js  GridSurface.tsx  Surface.js  Surface.tsx  types.ts
apps/desktop/src/manager/: ManagerApp.js  ManagerApp.tsx
apps/desktop/src/runtime/: WidgetHost.js  WidgetHost.tsx  bridge.js  bridge.ts  dispatcher.js  dispatcher.ts  registry.js  registry.ts
apps/desktop/src/shell/sections/: AboutSection.js  AboutSection.tsx  SettingsSection.js  SettingsSection.tsx  StoreSection.js  StoreSection.tsx  WidgetsSection.js  WidgetsSection.tsx
apps/desktop/src/ui/: EditModeToggle.tsx  global.css  manager.css
crates/vyn-format/: Cargo.toml
crates/vyn-format/src/: lib.rs
crates/vyn-manifest/: Cargo.toml
crates/vyn-manifest/src/: lib.rs
crates/vyn-sandbox/: Cargo.toml
crates/vyn-sandbox/src/: lib.rs
docs/: widget-developer-guide.md
scripts/: build-release.md  generate-latest-json.mjs  pack-examples.mjs  set-version.mjs
widgets/clock-modern/: index.html  manifest.json  package.json  tailwind.config.js  vite.config.ts
widgets/clock-modern/src/: App.tsx  index.css
widgets/cpu-modern/: index.html  manifest.json  package.json
widgets/cpu-modern/src/: App.tsx
widgets/launcher-modern/: index.html  manifest.json  package.json
widgets/launcher-modern/src/: App.tsx
widgets/media-modern/: index.html  manifest.json  package.json  vite.config.ts
widgets/media-modern/src/: App.tsx
widgets/notes-modern/: index.html  manifest.json  package.json  tailwind.config.js
widgets/notes-modern/src/: App.tsx
widgets/pomodoro-modern/: index.html  manifest.json  package.json
widgets/pomodoro-modern/src/: App.tsx  index.css
widgets/shared/: index.ts  package.json  tailwind.base.js
