[workspace]
resolver = "2"
members = [
    "apps/desktop/src-tauri",
    "crates/vyn-format",
    "crates/vyn-manifest",
    "crates/vyn-sandbox",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Vyntra"]

[workspace.dependencies]
# Internes
vyn-format = { path = "crates/vyn-format" }
vyn-manifest = { path = "crates/vyn-manifest" }
vyn-sandbox = { path = "crates/vyn-sandbox" }

# Externes communes
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
zip = "0.6"
semver = { version = "1", features = ["serde"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
