[package]
name = "vyntra-desktop"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Vyntra desktop runtime"

[lib]
name = "vyntra_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Internes
vyn-format = { workspace = true }
vyn-manifest = { workspace = true }
vyn-sandbox = { workspace = true }

# Tauri
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png", "unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"

# Async + logs
tokio = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization / erreurs
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# System info
sysinfo = "0.31"

# Verrous async
parking_lot = "0.12"
dashmap = "6"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Registry",
    "Win32_System_Com",
    "Win32_System_Performance",
] }
# WinRT pour SMTC + artwork (version alignée sur celle déjà tirée par Tauri)
windows = { version = "0.61", features = [
    "Foundation",
    "Media_Control",
    "Storage_Streams",
    "Win32_Graphics_Dxgi",
] }
# Effets Mica/Acrylic natifs Windows (déjà dans le lock via Tauri)
window-vibrancy = "0.6"
base64 = "0.22"
png = "0.17"

[features]
default = ["custom-protocol", "bundled-examples"]
custom-protocol = ["tauri/custom-protocol"]
bundled-examples = []
